--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "core-js": "^3.26.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -53,7 +54,7 @@
     "babel-loader": "^9.1.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
-    "css-loader": "^6.7.2",
+    "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
     "jsxobj": "^1.1.0",
     "source-map-loader": "^4.0.1",
