--- a/package.json
+++ b/package.json
@@ -57,9 +57,14 @@
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
     "jsxobj": "^1.1.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "source-map-loader": "^4.0.1",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-webpack-plugin": "^2.1.1",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
